[gd_scene load_steps=12 format=2]

[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-hazards/spike-push/spike-push-base.png" type="Texture" id=1]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-hazards/spike-push/spike-push-ball.png" type="Texture" id=2]
[ext_resource path="res://game-assets/game-scripts/test-zone-scripts/hazard-script/spike-thrower-object.gd" type="Script" id=3]
[ext_resource path="res://game-assets/audio/sfx/charge.wav" type="AudioStream" id=4]
[ext_resource path="res://game-assets/game-scripts/test-zone-scripts/hazard-script/spike-ball-thrower-object.gd" type="Script" id=5]
[ext_resource path="res://game-assets/game-classes/hurtable-area.gd" type="Script" id=6]
[ext_resource path="res://game-assets/audio/sfx/grab.wav" type="AudioStream" id=7]
[ext_resource path="res://game-assets/audio/sfx/Explosion.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 14.0

[sub_resource type="CircleShape2D" id=3]
radius = 14.0357

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 6 )

[node name="SpikeThrower" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="SpikeBall" type="RigidBody2D" parent="."]
position = Vector2( 0, -6 )
collision_layer = 8
collision_mask = 8
mode = 2
mass = 65535.0
gravity_scale = 4.0
sleeping = true
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="SpikeBall"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikeBall"]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="SpikeBall"]
enabled = true
cast_to = Vector2( 0, 14 )
collision_mask = 8

[node name="Area2D" type="Area2D" parent="SpikeBall"]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikeBall/Area2D"]
modulate = Color( 0.972549, 0, 0, 1 )
shape = SubResource( 3 )

[node name="Platform" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="Platform"]
position = Vector2( -16, -6 )
z_index = 2
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
shape = SubResource( 2 )

[node name="Platform2" type="StaticBody2D" parent="."]
position = Vector2( 0, 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform2"]
shape = SubResource( 2 )

[node name="ChargeSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="Throw" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[node name="Land" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "SFX"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -6 )
scale = Vector2( 1.8, 1.8 )

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
